@@ -6,6 +6,8 @@ Changes between 2.3.5 and 2.4.DEV
 
 - remove implicit distribute_setup support from setup.py.
 
+- fix issue305: ignore any problems when writing pyc files.
+
 - integrate tab-completion on options through use of "argcomplete".
   Thanks Anthon van der Neut for the PR.
 
